--- a/WeatherAPI1/style.css
+++ b/WeatherAPI1/style.css
@@ -174,7 +174,7 @@ input.search-bar {
 /* Weather forecast */
 .weather_forecast_container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
     width: 100%;
     height: 100%;
@@ -193,6 +193,8 @@ input.search-bar {
     border-radius: 20px;
     color: white;
     width: auto;
+    
+    min-width: 160px;
     height: auto;
 }
 
@@ -254,7 +256,7 @@ input.search-bar {
     /* Weather forecast */
     .weather_forecast_container {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(6, 1fr);
         gap: 1rem;
         width: 100%;
         height: 100%;
@@ -287,7 +289,7 @@ input.search-bar {
 }
 
 /* 3fr */
-@media screen and (min-width: 950px) and (max-width: 1100px) {
+@media screen and (min-width: 950px) and (max-width: 1200px) {
     /* Weather forecast */
     .weather_forecast_container {
         display: grid;
@@ -299,7 +301,7 @@ input.search-bar {
 }
 
 /* 4fr */
-@media screen and (min-width: 1100px) and (max-width: 1250px) {
+@media screen and (min-width: 1200px) and (max-width: 1350px) {
     /* Weather forecast */
     .weather_forecast_container {
         display: grid;
