--- a/WeatherAPI1/style.css
+++ b/WeatherAPI1/style.css
@@ -65,6 +65,11 @@ header {
     font-size: var(--H1-FONT-SIZE);
 }
 
+.header > img{
+    width: auto;
+    height: clamp(2rem, 3vw, 3rem);
+}
+
 /* main */
 .weathers {
     display: flex;
