--- a/WeatherAPI1/style.css
+++ b/WeatherAPI1/style.css
@@ -10,7 +10,9 @@
 }
 
 :root {
-    --BACKGROUND-COLOR: #000000d0;
+    /* --BACKGROUND-COLOR: #000000d0;
+    --BACKGROUND-COLOR1: #0000007a; */
+    --BACKGROUND-COLOR: #000000bc;
     --BACKGROUND-COLOR1: #0000007a;
 }
 
@@ -30,6 +32,7 @@ h1{
 }
 h3{
     font-size: clamp(0.3rem, 2.5vh, 1.5rem);
+    white-space: nowrap;
 }
 
 body {
